fix bug where buttons are blue on mobile for header

--- a/src/styles/nav/nav.scss
+++ b/src/styles/nav/nav.scss
@@ -81,4 +81,8 @@
   .button-wrapper .navButton {
     font-size: 4vmin;
   }
+
+  .navButton {
+    color: black;
+  }
 }
